// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-media-container renders correctly with an embedded video 1`] = `
<ecl-media-container data-ecl-media-container ecl-script="" ratio="16-9" theme="ec">
  <!---->
  caption for the media container
  <figure class="ecl-media-container ecl-media-container--16-9">
    <div class="ecl-media-container__media" slot="embedded-media">
      <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="197" src="https://www.youtube.com/embed/fgi-GSCB6ho" title="New digital strategy" width="350"></iframe>
    </div>
  </figure>
</ecl-media-container>
`;

exports[`ecl-media-container renders correctly with an html5 video 1`] = `
<ecl-media-container ratio="16-9" sources="[{&quot;src&quot;: &quot;https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4&quot;, &quot;type&quot;: &quot;video/mp4&quot;}, {&quot;src&quot;: &quot;https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm&quot;, &quot;type&quot;: &quot;video/webm&quot;}]" theme="ec" tracks="[{&quot;src&quot;: &quot;/captions/bunny-en.vtt&quot;, &quot;kind&quot;: &quot;captions&quot;, &quot;src_lang&quot;: &quot;en&quot;, &quot;label&quot;: &quot;English&quot;}, {&quot;src&quot;: &quot;/captions/bunny-fr.vtt&quot;, &quot;kind&quot;: &quot;captions&quot;, &quot;src_lang&quot;: &quot;fr&quot;, &quot;label&quot;: &quot;français&quot;}]">
  <!---->
  caption for the media container
  <figure class="ecl-media-container ecl-media-container--16-9">
    <video class="ecl-media-container__media" controls="">
      <source src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4" type="video/mp4">
      <source src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm" type="video/webm">
      <track kind="captions" label="English" src="/captions/bunny-en.vtt" srclang="en"></track>
      <track kind="captions" label="français" src="/captions/bunny-fr.vtt" srclang="fr"></track>
    </video>
  </figure>
</ecl-media-container>
`;

exports[`ecl-media-container renders correctly with an image 1`] = `
<ecl-media-container description="caption for the media container" image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" ratio="16-9" theme="ec">
  <!---->
  <figure class="ecl-media-container ecl-media-container--16-9">
    <ecl-picture image="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" imgclass="ecl-media-container__media sc-ecl-media-container-ec" styleclass="ecl-media-container__picture sc-ecl-media-container-ec"></ecl-picture>
  </figure>
</ecl-media-container>
`;
